--- a/app/views/announcements/list.html.erb
+++ b/app/views/announcements/list.html.erb
@@ -1,20 +1,60 @@
-<% if @announcement.blank? %>
-  <p>There are no announcements currently in the system.</p>
-<% else %>
-  <p>These are the current Announcements in our system</p>
-
-  <ul id = "announcement">
-    <% @announcement.each do |c| %>
-      <li><%= link_to c.title, {:action => 'show', :id => c.id} -%></li>
-    <% end %>
-  </ul>
-
-<% end %>
-<p><%= link_to "Add new Announcement", {:action => 'new_post' }%></p>
-
-<p><%= link_to "Delete All Announcements", {:action => 'delete_all' }%></p>
 
 
-<div class="button">
-  <%= link_to "Announce", {:action => 'post_groupme' } %>
+<div class="container" id ="home-container">
+  <div class="jumbotron-all-an rounded" id ="new-an-jumbotron">
+    <div class="row margin-inc">
+      <div class="w-auto mx-auto">
+        <div class="col">
+          <h1 class="style-top">Control Center</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="w-auto mx-auto">
+        <div class="col">
+          <div class="jumbotron-all-white rounded">
+            <h2><%= link_to "Add new Announcement", {:action => 'new_post' }%></h2>
+            <h2><%= link_to "Delete All Announcements", {:action => 'delete_all' }%></h2>
+          </div>
+        </div>
+      </div>
+      <div class="w-auto mx-auto">
+        <div class="col">
+          <div class="jumbotron-white-right rounded">
+            <div class="row">
+              <div class="w-auto mx-auto">
+                <% if @announcement.blank? %>
+                  <h5 class="">No Announcements</h5>
+                <% else %>
+                  <h5 class="">Announcements</h5>
+                <% end %>
+              </div>
+            </div>
+            <ol type="1" id = "announcement">
+              <% @announcement.each do |c| %>
+                <div class="row">
+                  <li><%= link_to c.title, {:action => 'show', :id => c.id} -%></li>
+                </div>
+              <% end %>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="w-auto mx-auto">
+        <div class="jumbotron-announce-btn-white rounded">
+          <div class="col align-self-center">
+
+            <div class="button">
+              <h1><%= link_to "Announce", {action: 'post_groupme'}, class: "announce-btn", remote: true%></h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
