--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AnnouncebotFinal</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>AnnouncebotFinal</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <%= yield %>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-    <% if current_user %>
-    <p><%= link_to "Logout", logout_path%></p>
-  <% else %>
-    <p><%= link_to "Login", login_path%></p>
-    <br>
-    <p><%= link_to "Signup", signup_path%></p>
-  <% end %>
-  </body>
+
+
+      <% if current_user %>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <%= link_to "Home", index_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Logout", logout_path, class: "nav-link" %>
+        </li>
+
+        </ul>
+      <ul class="nav navbar-nav navbar-right">
+
+        <li class="nav-link">Welcome <%= current_user.username %></li>
+      </ul>
+
+      <% else %>
+
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <%= link_to "Login", login_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Signup", signup_path, class: "nav-link"%>
+        </li>
+      </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-link">You are not logged in.</li>
+        </ul>
+      <% end %>
+
+  </div>
+</nav>
+<%= yield %>
+
+
+</body>
 </html>
