--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -13,6 +13,18 @@
 
     </div>
 
+    <%if(!current_user) %>
+      <div class="row">
+        <div class="w-50 mx-auto">
+          <div class="jumbotron" id="welcome-text">
+            <div class="col align-self-center">
+              <%= link_to "Login", login_path, class: "small-home-text"%>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
     <%if(current_user) %>
       <div class="row">
         <div class="w-50 mx-auto">
@@ -23,7 +35,6 @@
         </div>
       </div>
       </div>
-
     <% end %>
 
     <%if(access_tools) %>
