--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -19,6 +19,8 @@
           <div class="jumbotron" id="welcome-text">
             <div class="col align-self-center">
               <%= link_to "Login", login_path, class: "small-home-text"%>
+              </br>
+              <%= link_to "Signup", signup_path, class: "small-home-text"%>
             </div>
           </div>
         </div>
